# dotfiles

./: .fehbg  .gitmodules  .zprofile  README  bootstrap.sh  code-extensions.lst  code-install.sh  deploy.sh  dot  emacs  packages.lst  readme  setpath.sh  setup.sh  tmux.conf  update-vscode-deb.sh  vim-configure.sh  vimrc
.config/: aliases  functions
.config/X11/: Xresources  xinitrc
.config/alacritty/: alacritty.toml  alacritty.yml
.config/dunst/: dunstrc
.config/fontconfig/: fonts.conf
.config/git/: config
.config/gtk-2.0/: gtkrc.mine
.config/gtk-3.0/: settings.ini
.config/nvim/: init.lua  init.vim
.config/shell/: aliases
.config/sxhkd/: sxhkdrc
.config/tmux/: tmux.conf
.config/vifm/: vifmrc
.config/xmobar/: build  xmobar-bin.cabal  xmobar.hs  xmobarrc
.config/xmobar/lib/: Sections.hs
.config/xmobar/lib/Sections/: Battery.hs  Cpu.hs  Memory.hs  Misc.hs  Network.hs
.config/xmobar/scripts/: sound.sh  tmuxls.sh
.config/xmonad/: build  xmonad-bin.cabal  xmonad.hs
.config/xmonad/lib/: Configs.hs
.config/xmonad/lib/Configs/: Colors.hs  KeyBindings.hs  Main.hs  Scratchpad.hs  XPrompt.hs
.config/zsh/: .zlogin  .zshrc
.vim/: smallrc  vimrc
.vim/vimrc.d/: airline.vim  build_systems.vim  coc.vim  code_formatting.vim  misc.vim  nerdtree.vim  statusline.vim
config-files/: .tmux.conf  alacritty.yml  spacemacs  tmux.conf  vimrc  zshrc
config-files/config/: alacritty.yml
files/: .fehbg  .gitconfig  .tmux.conf  .vimrc  .xinitrc  .zshrc
vscode/: code-extensions.lst  keybindings.json  settings.json  update-vscode-deb.sh
(+70 files in other folders)
