cabal-version:  >=1.10
name:           xmobar-bin
version:        0.1
author:         Abhishek Kadam
maintainer:     lycuid@gmail.com
license:        GPL3
build-type:     Simple

executable xmobar-bin
  main-is:          xmobar.hs
  hs-source-dirs:   ., lib
  other-modules:    Sections
                  , Sections.Battery
                  , Sections.Cpu
                  , Sections.Memory
                  , Sections.Network
  ghc-options:      -dynamic -threaded -Wall
  build-depends:    base, directory, filepath, xmobar
  default-language: Haskell2010
